--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
   margin: 0;
   padding: 0;
   background: black;
-  font-family: Manrope, sans-serif;
+  font-family: "Manrope", sans-serif;
   font-weight: 400;
   color: white;
 }
