--- a/src/CSS/Countdown.css
+++ b/src/CSS/Countdown.css
@@ -1,32 +1,36 @@
 .Countdown {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    margin: 30px 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin: 30px 0;
 }
 
-.timeColon,.timePart, .timePart * {
-    margin: 0 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: var(--blue);
-    background-clip: text;
-    font-family: "Inter", sans-serif;
-    font-weight: 500;
-    font-size: 1.15rem;
-    color: #76f9baee;
+.timeColon,
+.timePart,
+.timePart * {
+  margin: 0 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--blue);
+  background-clip: text;
+  font-family: "Inter", sans-serif;
+  font-weight: 500;
+  font-size: 1.15rem;
+  color: #76f9baee;
 }
 
 @media (max-width: 700px) {
-    .Countdown {
-        padding: 12px 18px;
-        margin: 20px 0;
-    }
+  .Countdown {
+    padding: 12px 18px;
+    margin: 20px 0;
+  }
 
-.timeColon,.timePart, .timePart * {
-        font-size: 0.8rem;
-    }
+  .timeColon,
+  .timePart,
+  .timePart * {
+    font-size: 0.8rem;
+  }
 }
