--- a/src/CSS/Lander.css
+++ b/src/CSS/Lander.css
@@ -46,7 +46,7 @@
 
 .LanderRing {
   position: absolute;
-  z-index: 1;
+  z-index: 2;
 }
 
 .ringLeft {
@@ -65,6 +65,13 @@
   height: 50px;
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 1));
   bottom: 0;
+}
+
+.LanderGlobe {
+  position: absolute;
+  right: -10%;
+  bottom: -25%;
+  z-index: 1;
 }
 
 @media (max-width: 700px) {
