--- a/src/CSS/AboutUs.css
+++ b/src/CSS/AboutUs.css
@@ -26,14 +26,11 @@
   margin: auto;
   background: linear-gradient(
     to bottom,
-    rgba(102, 205, 104, 0.25) 0%,
-    rgba(255, 255, 255, 0) 13%
+    rgba(102, 205, 104, 0.19) 0.2%,
+    rgba(255, 255, 255, 0) 40%
   );
-
-  height: 900px;
-  width: 1400px;
+  width: 90vw;
   padding-top: 50px;
-  border: 2px solid;
   border-radius: 100%;
   border-bottom: 0px;
   border-left: 0px;
@@ -58,8 +55,7 @@
 
 @media (max-width: 800px) {
   .dome {
-    width: 800px;
-    height: 400px;
+    width: 80vw;
   }
   .about-us-description {
     width: 400px;
