--- a/src/CSS/Sponz.css
+++ b/src/CSS/Sponz.css
@@ -29,14 +29,12 @@
   margin: auto;
   background: linear-gradient(
     to bottom,
-    rgba(102, 205, 104, 0.25) 0%,
-    rgba(255, 255, 255, 0) 13%
+    rgba(102, 205, 104, 0.19) 0%,
+    rgba(255, 255, 255, 0) 20%
   );
 
-  height: 900px;
-  width: 1400px;
+  width: 90vw;
   padding-top: 50px;
-  border: 2px solid;
   border-radius: 100%;
   border-bottom: 0px;
   border-left: 0px;
@@ -75,8 +73,7 @@
 
 @media (max-width: 800px) {
   .spons-dome {
-    width: 800px;
-    height: 400px;
+    width: 80vw;
     margin: 0;
   }
 
